# orbistra

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
console/: app.js  index.html  style.css
crates/orbistra-core/: Cargo.toml
crates/orbistra-core/src/: catalog.rs  frames.rs  lib.rs  propagator.rs
crates/orbistra-sentry/: Cargo.toml
crates/orbistra-sentry/src/: lib.rs  main.rs
crates/orbistra-server/: Cargo.toml
crates/orbistra-server/src/: main.rs
docs/: ARCHITECTURE.md  ROADMAP.md  index.html
