[package]
name = "orbistra-sentry"
description = "Conjunction screening and collision-risk assessment over the full space catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
orbistra-core = { path = "../orbistra-core" }
chrono = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "orbistra-sentry"
path = "src/main.rs"
